--- a/js-graphql-endpoint/package.json
+++ b/js-graphql-endpoint/package.json
@@ -2,7 +2,7 @@
   "name": "js-graphql-endpoint",
   "version": "0.0.1",
   "description": "GraphQL endpoint based on https://github.com/confluentinc/ksqldb-graphql",
-  "main": "src/app.ts",
+  "main": "app.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/gklijs/grpc-binary-poc"
@@ -21,7 +21,6 @@
     "graphql": "14.7.0",
     "ts-node": "^9.1.1"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
