--- a/rust-data-creator/Cargo.toml
+++ b/rust-data-creator/Cargo.toml
@@ -8,10 +8,13 @@ edition = "2018"
 
 [dependencies]
 bytes = "1.0"
+ksqldb = "0.1.0-alpha.6"
 prost = "0.7"
 prost-derive = "0.7"
+reqwest = "0.11"
 rdkafka = { version = "0.26", features = ["cmake-build"] }
 schema_registry_converter = { version = "2.0.2", features = ["proto_raw"] }
+serde_json = "1.0"
 tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
