--- a/rust-data-creator/Cargo.toml
+++ b/rust-data-creator/Cargo.toml
@@ -13,8 +13,8 @@ prost = "0.7"
 prost-derive = "0.7"
 reqwest = "0.11"
 rdkafka = { version = "0.26", features = ["cmake-build"] }
-schema_registry_converter = { version = "2.0.2", features = ["proto_raw"] }
-tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
+schema_registry_converter = { version = "2.1.0", features = ["easy", "proto_raw"] }
+tokio = { version = "1.8.1", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
 prost-build = "0.7"
