--- a/schema-setter/pom.xml
+++ b/schema-setter/pom.xml
@@ -14,6 +14,14 @@
         <schema-registry-url>http://127.0.0.1:8081</schema-registry-url>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <name>confluent</name>
+            <url>https://packages.confluent.io/maven</url>
+        </repository>
+    </repositories>
+
     <pluginRepositories>
         <pluginRepository>
             <id>confluent</id>
